tekton/resources/dashboard-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-ui-ingress
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
# Set Your host DNS pointing to the LoadBalancer IP
  - host: tekton-dashboard.TEKTON_DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: tekton-dashboard
          servicePort: 9097
