tekton/resources/gitlab-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-tekton-ingress
  #namespace: getting-started
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-push-elistener # REPLACE WITH YOUR SERVICE NAME FROM STEP 2
              servicePort: 8080
